feat (all) : add new feature and fix bug