@@ -1,31 +1,44 @@
 package com.elearning.tutorservice.service.impl;
 
+import com.elearning.tutorservice.dto.event.AccountCreatedEvent;
+import com.elearning.tutorservice.dto.event.TutorApprovedEvent;
 import com.elearning.tutorservice.dto.event.TutorProfileUpdatedEvent;
-import com.elearning.tutorservice.dto.request.AvailabilityInput;
+import com.elearning.tutorservice.dto.event.TutorIndexEvent;
+import com.elearning.tutorservice.dto.response.*;
+import com.elearning.tutorservice.entity.*;
+import com.elearning.tutorservice.service.producer.KafkaProducer;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.elearning.tutorservice.dto.request.BulkUpdateAvailabilityRequest;
-import com.elearning.tutorservice.dto.response.AvailabilityResponse;
-import com.elearning.tutorservice.dto.response.TutorProfileResponse;
-import com.elearning.tutorservice.dto.response.TutorScheduleResponse;
-import com.elearning.tutorservice.dto.response.TutorSearchResponse;
-import com.elearning.tutorservice.entity.AvailabilityStatus;
-import com.elearning.tutorservice.entity.Tutor;
-import com.elearning.tutorservice.entity.TutorAvailability;
+import com.elearning.tutorservice.dto.request.SubmitReviewRequest;
+import com.elearning.tutorservice.dto.request.AvailabilityInput;
+import com.elearning.tutorservice.dto.request.UpdateOnboardingStatusRequest;
+import com.elearning.tutorservice.entity.enums.OnboardingStatus;
 import com.elearning.tutorservice.repository.TutorAvailabilityRepository;
+import com.elearning.tutorservice.repository.TutorOnboardingRepository;
 import com.elearning.tutorservice.repository.TutorRepository;
+import com.elearning.tutorservice.repository.TutorReviewRepository;
+import com.elearning.tutorservice.repository.TutorSubjectRepository;
+import com.elearning.tutorservice.repository.TutorLanguageRepository;
+import com.elearning.tutorservice.repository.TutorSocialRepository;
+import com.elearning.tutorservice.repository.CareerEntryRepository;
+import com.elearning.tutorservice.repository.CertificationRepository;
 import com.elearning.tutorservice.service.TutorService;
+import com.elearning.tutorservice.service.AvailabilityService;
+import com.elearning.tutorservice.mapper.TutorIndexEventMapper;
+import com.elearning.tutorservice.mapper.TutorMapper;
+import jakarta.persistence.EntityManager;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
@@ -36,91 +49,287 @@ public class TutorServiceImpl implements TutorService {
 
     private final TutorRepository tutorRepository;
     private final TutorAvailabilityRepository availabilityRepository;
+    private final TutorOnboardingRepository onboardingRepository;
+    private final TutorSubjectRepository tutorSubjectRepository;
+    private final TutorLanguageRepository tutorLanguageRepository;
+    private final TutorSocialRepository tutorSocialRepository;
+    private final CareerEntryRepository careerEntryRepository;
+    private final CertificationRepository certificationRepository;
+    private final TutorReviewRepository tutorReviewRepository;
+    private final ObjectMapper objectMapper;
+    private final KafkaProducer kafkaProducer;
+    private final TutorIndexEventMapper tutorIndexEventMapper;
+    private final TutorMapper tutorMapper;
+    private final EntityManager entityManager;
+    private final AvailabilityService availabilityService;
     
     private static final DateTimeFormatter TIME_FORMATTER = DateTimeFormatter.ofPattern("HH:mm");
 
     @Override
-    public Page<TutorSearchResponse> searchTutors(List<String> languageCodes, BigDecimal minPrice, BigDecimal maxPrice, List<String> availableDays, Pageable pageable) {
-        Page<Tutor> tutors = tutorRepository.findTutorsWithFilters(languageCodes, minPrice, maxPrice, pageable);
-
-        return tutors.map(this::mapToSearchResponse);
-    }
-
-    @Override
-    public List<TutorScheduleResponse> getTutorSchedule(Long tutorId, boolean includeBooked) {
-        // TODO: Implement schedule logic
-        return List.of();
-    }
-
-    @Override
-    public TutorProfileResponse getTutorProfile(UUID tutorId) {
+    @Transactional(readOnly = true)
+    public TutorDetailResponse getTutorDetail(UUID tutorId) {
         Tutor tutor = tutorRepository.findById(tutorId)
                 .orElseThrow(() -> new RuntimeException("Tutor not found"));
 
-        return mapToProfileResponse(tutor);
+        return tutorMapper.toTutorDetailResponse(tutor);
     }
 
-    private TutorSearchResponse mapToSearchResponse(Tutor tutor) {
-        // TODO: Implement mapping
-        return TutorSearchResponse.builder()
-                .id(tutor.getId())
-                .build();
+    @Override
+    @Transactional(readOnly = true)
+    public Map<UUID, TutorResponse> getTutorsByIds(List<UUID> ids) {
+        List<Tutor> tutors = tutorRepository.findAllById(ids);
+
+        return tutors.stream()
+                .collect(Collectors.toMap(Tutor::getId, tutorMapper::toTutorResponse));
     }
 
-    private TutorProfileResponse mapToProfileResponse(Tutor tutor) {
-        return TutorProfileResponse.builder()
-                .id(tutor.getId())
-                .isVerified(tutor.getIsVerified())
-                .introduction(tutor.getIntroduction())
-                .specialization(tutor.getSpecialization())
-                .nationalityCode(tutor.getNationalityCode())
-                .videoUrl(tutor.getVideoUrl())
-                .videoThumbnailUrl(tutor.getVideoThumbnailUrl())
-                .currentSessionFee(tutor.getCurrentSessionFee())
-                .previousSessionFee(tutor.getPreviousSessionFee())
-                .sessionDurationMinutes(tutor.getSessionDurationMinutes())
-                .currency(tutor.getCurrency())
-                .teachesInGroups(tutor.getTeachesInGroups())
-                .maxGroupMembers(tutor.getMaxGroupMembers())
-                .timezoneOffset(tutor.getTimezoneOffset())
-                .languages(tutor.getLanguages() != null ? tutor.getLanguages().stream()
-                        .map(lang -> TutorProfileResponse.TutorLanguageResponse.builder()
-                                .id(lang.getId())
-                                .languageCode(lang.getLanguageCode())
-                                .proficiencyLevel(lang.getProficiencyLevel())
+    @Override
+    @Transactional
+    public void updateOnboardingStatus(UUID tutorId, UpdateOnboardingStatusRequest request) {
+        log.info("Updating onboarding status for tutor {} to {}", tutorId, request.getStatus());
+
+        TutorOnboarding onboarding = onboardingRepository.findById(tutorId)
+                .orElseThrow(() -> new RuntimeException("Onboarding not found for tutor: " + tutorId));
+
+        try {
+            onboarding.setStatus(request.getStatus());
+            onboarding.setDescription(request.getDescription());
+
+            onboardingRepository.save(onboarding);
+
+            log.info("Successfully updated onboarding status for tutor {} to {}", tutorId, request.getStatus());
+        } catch (Exception e) {
+            log.error("Failed to update onboarding status", e);
+            throw new RuntimeException("Failed to update onboarding status", e);
+        }
+    }
+
+    @Override
+    @Transactional
+    public void createTutorOnboarding(AccountCreatedEvent event) {
+        log.info("Creating tutor onboarding for user: {} with role: {}", event.getId(), event.getRole());
+
+        // Only create onboarding for tutors
+        if (event.getRole() == null || !"TUTOR".equalsIgnoreCase(event.getRole().trim())) {
+            log.info("Skipping onboarding creation for non-tutor user: {} (role: {})", event.getId(), event.getRole());
+            return;
+        }
+
+        log.info("Proceeding with onboarding creation for tutor: {}", event.getId());
+
+        try {
+            // Create JSON data with id, name, email
+            Map<String, Object> onboardingData = new HashMap<>();
+            onboardingData.put("id", event.getId().toString());
+            onboardingData.put("fullName", event.getFullName());
+            onboardingData.put("email", event.getEmail());
+
+            String jsonData = objectMapper.writeValueAsString(onboardingData);
+
+            TutorOnboarding onboarding = TutorOnboarding.builder()
+                    .tutorId(event.getId())
+                    .jsonData(jsonData)
+                    .build();
+
+            onboardingRepository.save(onboarding);
+
+            log.info("Successfully created tutor onboarding for user: {}", event.getId());
+        } catch (Exception e) {
+            log.error("Failed to create tutor onboarding", e);
+            throw new RuntimeException("Failed to create tutor onboarding", e);
+        }
+    }
+
+    @Override
+    public void updateTutorProfile(TutorProfileUpdatedEvent event) {
+        log.info("Updating tutor profile for: {}", event.getTutorId());
+
+        try {
+            // Get existing tutor
+            Tutor tutor = tutorRepository.findById(event.getTutorId())
+                    .orElseThrow(() -> new RuntimeException("Tutor not found: " + event.getTutorId()));
+
+            // Update basic fields
+            if (event.getFullName() != null) {
+                tutor.setFullName(event.getFullName());
+            }
+            if (event.getHeadline() != null) {
+                tutor.setHeadline(event.getHeadline());
+            }
+            if (event.getIntroduction() != null) {
+                tutor.setIntroduction(event.getIntroduction());
+            }
+
+            // Save updated tutor
+            tutorRepository.save(tutor);
+            log.info("Updated tutor profile for: {}", event.getTutorId());
+
+            // Publish update event to search service
+            publishTutorUpdateEvent(tutor);
+
+        } catch (Exception e) {
+            log.error("Failed to update tutor profile for {}: {}", event.getTutorId(), e.getMessage(), e);
+            throw new RuntimeException("Failed to update tutor profile", e);
+        }
+    }
+
+    /**
+     * Helper method to publish tutor index events
+     */
+    private void publishTutorUpdateEvent(Tutor tutor) {
+        try {
+            TutorIndexEvent indexEvent = tutorIndexEventMapper.toEvent(tutor, "UPDATED");
+            kafkaProducer.sendTutorIndexEvent(indexEvent);
+            log.info("Published tutor update event for: {}", tutor.getId());
+        } catch (Exception e) {
+            log.error("Failed to publish tutor update event for {}: {}", tutor.getId(), e.getMessage());
+            // Don't fail the main operation if indexing fails
+        }
+    }
+    
+    @Override
+    public AvailabilityListResponse getAvailabilities(UUID tutorId, LocalDate startDate, LocalDate endDate) {
+        return availabilityService.getAvailabilities(tutorId, startDate, endDate);
+    }
+
+    @Override
+    @Transactional
+    public void approveTutor(UUID tutorId) {
+        log.info("Approving tutor: {}", tutorId);
+
+        TutorOnboarding onboarding = onboardingRepository.findById(tutorId)
+                .orElseThrow(() -> new RuntimeException("Onboarding not found for tutor: " + tutorId));
+
+        try {
+            // Parse onboarding data to TutorDetailResponse object
+            log.info("JSON data: {}", onboarding.getJsonData());
+            TutorDetailResponse tutorData = objectMapper.readValue(onboarding.getJsonData(), TutorDetailResponse.class);
+
+            log.info("Parsed tutor data from onboarding for tutor: {}", tutorData);
+
+            // 1. Save main Tutor entity (without child collections)
+            Tutor tutor = Tutor.builder()
+                    .id(tutorId)
+                    .fullName(tutorData.getFullName())
+                    .email(tutorData.getEmail())
+                    .isVerified(true)
+                    .introduction(tutorData.getIntroduction())
+                    .headline(tutorData.getHeadline())
+                    .countryCode(tutorData.getCountryCode())
+                    .gender(tutorData.getGender())
+                    .avatarUrl(tutorData.getAvatarUrl())
+                    .timezone(tutorData.getTimezone())
+                    .videoUrl(tutorData.getVideoUrl())
+                    .currentSessionFee(tutorData.getCurrentSessionFee())
+                    .build();
+            
+            tutorRepository.save(tutor);
+            entityManager.flush();
+            log.info("Created tutor record for: {}", tutorId);
+
+            // 2. Save TutorLanguages (only if valid data exists)
+            if (tutorData.getLanguageCodes() != null && !tutorData.getLanguageCodes().isEmpty()) {
+                List<TutorLanguage> validLanguages = tutorData.getLanguageCodes().stream()
+                        .filter(lang -> lang.getCode() != null) // Skip if code is null
+                        .map(lang -> TutorLanguage.builder()
+                                .tutor(tutor)
+                                .code(lang.getCode())
+                                .isNative(lang.getIsNative())
                                 .build())
-                        .collect(Collectors.toList()) : null)
-                .socialLinks(tutor.getSocialLinks() != null ? tutor.getSocialLinks().stream()
-                        .map(social -> TutorProfileResponse.TutorSocialResponse.builder()
-                                .id(social.getId())
+                        .toList();
+                
+                if (!validLanguages.isEmpty()) {
+                    tutorLanguageRepository.saveAll(validLanguages);
+                    log.info("Created {} language records", validLanguages.size());
+                } else {
+                    log.warn("No valid language data to insert for tutor: {}", tutorId);
+                }
+            }
+
+            // 3. Save TutorSubjects (only if valid data exists)
+            if (tutorData.getSubjectIds() != null && !tutorData.getSubjectIds().isEmpty()) {
+                List<TutorSubject> validSubjects = tutorData.getSubjectIds().stream()
+                        .map(subjectId -> TutorSubject.builder()
+                                .tutor(tutor)
+                                .categoryId(subjectId)
+                                .subjectName("Subject") // TODO: Look up actual subject name
+                                .build())
+                        .toList();
+                
+                tutorSubjectRepository.saveAll(validSubjects);
+                log.info("Created {} subject records", validSubjects.size());
+            }
+
+            // 4. Save TutorAvailabilities
+            if (tutorData.getAvailabilities() != null && !tutorData.getAvailabilities().isEmpty()) {
+                List<TutorAvailability> availabilities = tutorData.getAvailabilities().stream()
+                        .map(avail -> TutorAvailability.builder()
+                                .tutor(tutor)
+                                .dayOfWeek(avail.getDayOfWeek().shortValue())
+                                .startTime(LocalTime.parse(avail.getStartTime(), TIME_FORMATTER))
+                                .endTime(LocalTime.parse(avail.getEndTime(), TIME_FORMATTER))
+                                .effectiveStartDate(avail.getEffectiveStartDate())
+                                .effectiveEndDate(avail.getEffectiveEndDate())
+                                .build())
+                        .toList();
+                availabilityRepository.saveAll(availabilities);
+                log.info("Created {} availability records", availabilities.size());
+            }
+
+            // 5. Save TutorSocialLinks
+            if (tutorData.getSocialLinks() != null && !tutorData.getSocialLinks().isEmpty()) {
+                List<TutorSocial> socialLinks = tutorData.getSocialLinks().stream()
+                        .map(social -> TutorSocial.builder()
+                                .tutor(tutor)
                                 .platform(social.getPlatform())
                                 .url(social.getUrl())
                                 .build())
-                        .collect(Collectors.toList()) : null)
-                .subjects(tutor.getSubjects() != null ? tutor.getSubjects().stream()
-                        .map(subject -> TutorProfileResponse.TutorSubjectResponse.builder()
-                                .id(subject.getId())
-                                .subjectId(null) // Not stored in tutor-service
-                                .subjectName(subject.getSubjectName())
-                                .categoryId(subject.getCategoryId())
-                                .categoryName(null) // Not stored in tutor-service
+                        .toList();
+                tutorSocialRepository.saveAll(socialLinks);
+                log.info("Created {} social link records", socialLinks.size());
+            }
+
+            // 6. Save Educations
+            if (tutorData.getEducations() != null && !tutorData.getEducations().isEmpty()) {
+                List<CareerEntry> educations = tutorData.getEducations().stream()
+                        .map(edu -> CareerEntry.builder()
+                                .tutor(tutor)
+                                .type("EDUCATION")
+                                .title(edu.getTitle())
+                                .institution(edu.getInstitution())
+                                .startDate(edu.getStartDate())
+                                .endDate(edu.getEndDate())
+                                .location(edu.getLocation())
+                                .description(edu.getDescription())
                                 .build())
-                        .collect(Collectors.toList()) : null)
-                .careerEntries(tutor.getCareerEntries() != null ? tutor.getCareerEntries().stream()
-                        .map(entry -> TutorProfileResponse.CareerEntryResponse.builder()
-                                .id(entry.getId())
-                                .type(entry.getType())
-                                .title(entry.getTitle())
-                                .institution(entry.getInstitution())
-                                .startDate(entry.getStartDate())
-                                .endDate(entry.getEndDate())
-                                .location(entry.getLocation())
-                                .description(entry.getDescription())
+                        .toList();
+                careerEntryRepository.saveAll(educations);
+                log.info("Created {} education records", educations.size());
+            }
+
+            // 7. Save Experiences
+            if (tutorData.getExperiences() != null && !tutorData.getExperiences().isEmpty()) {
+                List<CareerEntry> experiences = tutorData.getExperiences().stream()
+                        .map(exp -> CareerEntry.builder()
+                                .tutor(tutor)
+                                .type("EXPERIENCE")
+                                .title(exp.getTitle())
+                                .institution(exp.getInstitution())
+                                .startDate(exp.getStartDate())
+                                .endDate(exp.getEndDate())
+                                .location(exp.getLocation())
+                                .description(exp.getDescription())
                                 .build())
-                        .collect(Collectors.toList()) : null)
-                .certifications(tutor.getCertifications() != null ? tutor.getCertifications().stream()
-                        .map(cert -> TutorProfileResponse.CertificationResponse.builder()
-                                .id(cert.getId())
+                        .toList();
+                careerEntryRepository.saveAll(experiences);
+                log.info("Created {} experience records", experiences.size());
+            }
+
+            // 8. Save Certifications
+            if (tutorData.getCertifications() != null && !tutorData.getCertifications().isEmpty()) {
+                List<Certification> certifications = tutorData.getCertifications().stream()
+                        .map(cert -> Certification.builder()
+                                .tutor(tutor)
                                 .name(cert.getName())
                                 .issuingOrganization(cert.getIssuingOrganization())
                                 .issueDate(cert.getIssueDate())
@@ -128,255 +337,63 @@ public class TutorServiceImpl implements TutorService {
                                 .credentialId(cert.getCredentialId())
                                 .credentialUrl(cert.getCredentialUrl())
                                 .build())
-                        .collect(Collectors.toList()) : null)
-                .build();
+                        .toList();
+                certificationRepository.saveAll(certifications);
+                log.info("Created {} certification records", certifications.size());
+            }
+
+            // Update onboarding status to APPROVED
+            onboarding.setStatus(OnboardingStatus.APPROVED);
+            onboardingRepository.save(onboarding);
+            log.info("Updated onboarding status to APPROVED for: {}", tutorId);
+
+            // Send notification event
+            TutorApprovedEvent event = TutorApprovedEvent.builder()
+                    .tutorId(tutorId)
+                    .email(tutor.getEmail())
+                    .fullName(tutor.getFullName())
+                    .build();
+            kafkaProducer.sendTutorApprovedEvent(event);
+            log.info("Sent tutor approved notification for: {}", tutorId);
+
+            // Publish tutor index event to search service
+            try {
+                TutorIndexEvent indexEvent = tutorIndexEventMapper.toEvent(tutor, "CREATED");
+                kafkaProducer.sendTutorIndexEvent(indexEvent);
+                log.info("Published tutor index event for new tutor: {}", tutorId);
+            } catch (Exception e) {
+                log.error("Failed to publish tutor index event for {}: {}", tutorId, e.getMessage());
+                // Don't fail the approval process if indexing fails
+            }
+
+        } catch (Exception e) {
+            log.error("Failed to approve tutor {}: {}", tutorId, e.getMessage(), e);
+            throw new RuntimeException("Failed to approve tutor", e);
+        }
     }
 
     @Override
-    public void updateTutorProfile(TutorProfileUpdatedEvent event) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'updateTutorProfile'");
-    }
-    
-    @Override
-    public List<AvailabilityResponse> getAvailabilities(UUID tutorId, LocalDate startDate, LocalDate endDate) {
-        log.info("Getting availabilities for tutor {} from {} to {}", tutorId, startDate, endDate);
-        
-        List<TutorAvailability> availabilities = availabilityRepository.findByTutorIdAndDateRangeAndStatus(
-                tutorId, startDate, endDate, AvailabilityStatus.AVAILABLE);
-        
-        return availabilities.stream()
-                .map(this::mapToAvailabilityResponse)
-                .collect(Collectors.toList());
-    }
-    
-    private AvailabilityResponse mapToAvailabilityResponse(TutorAvailability availability) {
-        return AvailabilityResponse.builder()
-                .id(availability.getId())
-                .dayOfWeek(availability.getDayOfWeek().intValue())
-                .startTime(availability.getStartTime().format(TIME_FORMATTER))
-                .endTime(availability.getEndTime().format(TIME_FORMATTER))
-                .effectiveStartDate(availability.getEffectiveStartDate())
-                .effectiveEndDate(availability.getEffectiveEndDate())
-                .status(availability.getStatus())
-                .build();
-    }
-    
-    @Override
     @Transactional
-    public void bulkUpdateAvailability(UUID tutorId, BulkUpdateAvailabilityRequest request) {
-        log.info("Bulk updating availability for tutor {} with mode: {}", tutorId, request.getMode());
-        
-        // 1. Validate request
-        validateBulkUpdateRequest(request);
-        
-        // 2. Get tutor
-        Tutor tutor = tutorRepository.findById(tutorId)
-                .orElseThrow(() -> new IllegalArgumentException("Tutor not found with id: " + tutorId));
-        
-        // 3. Process based on mode
-        if ("this_period".equals(request.getMode())) {
-            handleThisPeriodMode(tutor, request);
-        } else if ("recurring".equals(request.getMode())) {
-            handleRecurringMode(tutor, request);
-        } else {
-            throw new IllegalArgumentException("Invalid mode: " + request.getMode() + ". Must be 'this_period' or 'recurring'");
-        }
-        
-        log.info("Successfully bulk updated availability for tutor {}", tutorId);
-    }
-    
-    /**
-     * Validate bulk update request
-     */
-    private void validateBulkUpdateRequest(BulkUpdateAvailabilityRequest request) {
-        // Validate mode
-        if (!"this_period".equals(request.getMode()) && !"recurring".equals(request.getMode())) {
-            throw new IllegalArgumentException("Mode must be 'this_period' or 'recurring'");
-        }
-        
-        // Validate dates for "this_period" mode
-        if ("this_period".equals(request.getMode())) {
-            if (request.getStartDate() == null || request.getEndDate() == null) {
-                throw new IllegalArgumentException("startDate and endDate are required for 'this_period' mode");
-            }
-            if (request.getStartDate().isAfter(request.getEndDate())) {
-                throw new IllegalArgumentException("startDate must be before or equal to endDate");
-            }
-        }
-        
-        // Validate new availabilities
-        if (request.getNewAvailabilities() != null) {
-            for (AvailabilityInput input : request.getNewAvailabilities()) {
-                LocalTime start = LocalTime.parse(input.getStartTime(), TIME_FORMATTER);
-                LocalTime end = LocalTime.parse(input.getEndTime(), TIME_FORMATTER);
-                if (start.isAfter(end) || start.equals(end)) {
-                    throw new IllegalArgumentException("startTime must be before endTime");
-                }
-                if (input.getEffectiveEndDate() != null && 
-                    input.getEffectiveStartDate().isAfter(input.getEffectiveEndDate())) {
-                    throw new IllegalArgumentException("effectiveStartDate must be before or equal to effectiveEndDate");
-                }
-            }
-        }
-    }
-    
-    /**
-     * Handle "this_period" mode - chỉ ảnh hưởng khoảng thời gian cụ thể
-     * 
-     * Logic:
-     * 1. Với mỗi old availability:
-     *    - Nếu nằm hoàn toàn trong period: DELETE
-     *    - Nếu overlap với period: SPLIT thành các phần trước/sau period
-     * 2. Tạo new availabilities với effectiveStartDate/endDate trong period
-     */
-    private void handleThisPeriodMode(Tutor tutor, BulkUpdateAvailabilityRequest request) {
-        LocalDate periodStart = request.getStartDate();
-        LocalDate periodEnd = request.getEndDate();
-        
-        log.info("Handling 'this_period' mode for period {} to {}", periodStart, periodEnd);
-        
-        // 1. Process old availabilities
-        if (request.getOldAvailabilityIds() != null && !request.getOldAvailabilityIds().isEmpty()) {
-            // Security check: Ensure all IDs belong to this tutor
-            List<TutorAvailability> oldAvailabilities = availabilityRepository
-                    .findByIdInAndTutorId(request.getOldAvailabilityIds(), tutor.getId());
-            
-            if (oldAvailabilities.size() != request.getOldAvailabilityIds().size()) {
-                throw new IllegalArgumentException("Some availability IDs do not belong to this tutor");
-            }
-            
-            List<TutorAvailability> toSave = new ArrayList<>();
-            List<TutorAvailability> toDelete = new ArrayList<>();
-            
-            for (TutorAvailability old : oldAvailabilities) {
-                LocalDate oldStart = old.getEffectiveStartDate();
-                LocalDate oldEnd = old.getEffectiveEndDate(); // có thể null
-                
-                // Case 1: Old availability nằm hoàn toàn TRƯỚC period
-                // -> Giữ nguyên, không làm gì
-                if (oldEnd != null && oldEnd.isBefore(periodStart)) {
-                    log.debug("Availability {} is completely before period, keeping it", old.getId());
-                    continue;
-                }
-                
-                // Case 2: Old availability bắt đầu SAU period
-                // -> Giữ nguyên, không làm gì
-                if (oldStart.isAfter(periodEnd)) {
-                    log.debug("Availability {} starts after period, keeping it", old.getId());
-                    continue;
-                }
-                
-                // Case 3: Old availability overlap với period -> Cần split
-                
-                // Part 1: Phần TRƯỚC period (nếu có)
-                if (oldStart.isBefore(periodStart)) {
-                    TutorAvailability beforePart = TutorAvailability.builder()
-                            .tutor(tutor)
-                            .dayOfWeek(old.getDayOfWeek())
-                            .startTime(old.getStartTime())
-                            .endTime(old.getEndTime())
-                            .effectiveStartDate(oldStart)
-                            .effectiveEndDate(periodStart.minusDays(1)) // Kết thúc ngày trước period
-                            .status(AvailabilityStatus.AVAILABLE)
-                            .build();
-                    toSave.add(beforePart);
-                    log.debug("Created before-period part for availability {}", old.getId());
-                }
-                
-                // Part 2: Phần SAU period (nếu có)
-                // Chỉ tạo nếu old availability có endDate null (vô hạn) hoặc endDate sau period
-                if (oldEnd == null || oldEnd.isAfter(periodEnd)) {
-                    TutorAvailability afterPart = TutorAvailability.builder()
-                            .tutor(tutor)
-                            .dayOfWeek(old.getDayOfWeek())
-                            .startTime(old.getStartTime())
-                            .endTime(old.getEndTime())
-                            .effectiveStartDate(periodEnd.plusDays(1)) // Bắt đầu ngày sau period
-                            .effectiveEndDate(oldEnd) // Giữ nguyên endDate cũ (có thể null)
-                            .status(AvailabilityStatus.AVAILABLE)
-                            .build();
-                    toSave.add(afterPart);
-                    log.debug("Created after-period part for availability {}", old.getId());
-                }
-                
-                // Xóa availability gốc (vì đã split thành trước/sau hoặc nằm trong period)
-                toDelete.add(old);
-            }
-            
-            // Save splits và delete olds
-            if (!toSave.isEmpty()) {
-                availabilityRepository.saveAll(toSave);
-                log.info("Saved {} split availability parts", toSave.size());
-            }
-            if (!toDelete.isEmpty()) {
-                availabilityRepository.deleteAll(toDelete);
-                log.info("Deleted {} old availabilities", toDelete.size());
-            }
-        }
-        
-        // 2. Create new availabilities
-        createNewAvailabilities(tutor, request.getNewAvailabilities());
-    }
-    
-    /**
-     * Handle "recurring" mode - ảnh hưởng toàn bộ recurring pattern
-     * 
-     * Logic:
-     * 1. Đánh dấu tất cả old availabilities là DELETED
-     * 2. Tạo new availabilities (thường với effectiveEndDate = null)
-     */
-    private void handleRecurringMode(Tutor tutor, BulkUpdateAvailabilityRequest request) {
-        log.info("Handling 'recurring' mode");
-        
-        // 1. Mark old availabilities as DELETED
-        if (request.getOldAvailabilityIds() != null && !request.getOldAvailabilityIds().isEmpty()) {
-            // Security check
-            List<TutorAvailability> oldAvailabilities = availabilityRepository
-                    .findByIdInAndTutorId(request.getOldAvailabilityIds(), tutor.getId());
-            
-            if (oldAvailabilities.size() != request.getOldAvailabilityIds().size()) {
-                throw new IllegalArgumentException("Some availability IDs do not belong to this tutor");
-            }
-            
-            // Set status = DELETED instead of hard delete (để giữ lịch sử)
-            for (TutorAvailability old : oldAvailabilities) {
-                old.setStatus(AvailabilityStatus.DELETED);
-            }
-            availabilityRepository.saveAll(oldAvailabilities);
-            log.info("Marked {} availabilities as DELETED", oldAvailabilities.size());
-        }
-        
-        // 2. Create new availabilities
-        createNewAvailabilities(tutor, request.getNewAvailabilities());
-    }
-    
-    /**
-     * Tạo new availabilities từ input list
-     */
-    private void createNewAvailabilities(Tutor tutor, List<AvailabilityInput> inputs) {
-        if (inputs == null || inputs.isEmpty()) {
-            log.info("No new availabilities to create");
-            return;
-        }
-        
-        List<TutorAvailability> newAvailabilities = new ArrayList<>();
-        
-        for (AvailabilityInput input : inputs) {
-            TutorAvailability availability = TutorAvailability.builder()
+    public void submitReview(UUID tutorId, SubmitReviewRequest request) {
+        try {
+            // Validate tutor exists
+            Tutor tutor = tutorRepository.findById(tutorId)
+                    .orElseThrow(() -> new RuntimeException("Tutor not found"));
+
+            // Create and save the review
+            TutorReview review = TutorReview.builder()
                     .tutor(tutor)
-                    .dayOfWeek(input.getDayOfWeek().shortValue())
-                    .startTime(LocalTime.parse(input.getStartTime(), TIME_FORMATTER))
-                    .endTime(LocalTime.parse(input.getEndTime(), TIME_FORMATTER))
-                    .effectiveStartDate(input.getEffectiveStartDate())
-                    .effectiveEndDate(input.getEffectiveEndDate())
-                    .status(input.getStatus())
+                    .studentId(request.getStudentId())
+                    .rating(request.getRating())
+                    .comment(request.getComment())
                     .build();
-            
-            newAvailabilities.add(availability);
+
+            tutorReviewRepository.save(review);
+            log.info("Review submitted for tutor {} by student {}", tutorId, request.getStudentId());
+
+        } catch (Exception e) {
+            log.error("Failed to submit review for tutor {}: {}", tutorId, e.getMessage(), e);
+            throw new RuntimeException("Failed to submit review", e);
         }
-        
-        availabilityRepository.saveAll(newAvailabilities);
-        log.info("Created {} new availabilities", newAvailabilities.size());
     }
 }
